--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li></li>
     </ul>
     </div>
-    <script src="Index.js"  type="text/javascript"></script>
+    <script src="index.js"  type="text/javascript"></script>
     </body>
     </html>
   
