--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         </form>
 
 
-        <h2>Alarms </h2>
+        <h2 id="alarms">No Alarm Set</h2>
         <ul class="set-alarms-list">
+            
             <li></li>
         </ul>
     </div>
